# MT-NE-Pipeline

./: .gitignore  README.md  en_test.text  pyproject.toml
src/mt_named_entity/: align.py  cli.py  correct.py  embed.py  eval.py  filter.py  ner.py
src/mt_named_entity/old/: mt_eval.py
testdata/: en.ner  en_is.pos.tsv  en_text.txt  is.ner  is_text.txt
tests/: test_correct.py  test_mt_eval.py  test_ner_parsing.py  test_nertagger.py
tests/data/: corrections.tsv  example.en  example.is
