[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.poetry]
name = "mt-named-entity"
version = "0.1.0"
description = "Named entity handling for IS-EN MT systems"
authors = ["Miðeind ehf <tauganet@mideind.is>"]
readme = "README.md"
packages = [
    {include = "mt_named_entity", from = "src"}
]

[tool.poetry.scripts]
mt = "mt_named_entity.cli:cli"

[tool.poetry.dependencies]
python = "^3.9.2"
nltk = "^3.5"
reynir = "^2.10.1"
transformers = "^4.3.2"
spacy = "^2"
pyjarowinkler = "^1.8"
scipy = "^1.5"
greynirseq = {git = "https://github.com/mideind/greynirseq.git", rev = "main"}
flair = "^0.9"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
rope = "^0.17.0"
black = "^20.8b1"
isort = "^5.7.0"
pylint = "^2.7.2"
flake8 = "^3.8.4"
mypy = "^0.812"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
